technologies/deployment-pipelines/blog-cd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-app
  namespace: blog-app
  labels:
    app: blog-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-app
  template:
    metadata:
      labels:
        app: blog-app
    spec:
      containers:
      - image:  opeomotayo/blog-app:23
        name: blog-app
        ports:
        - containerPort: 3000
