technologies/deployment-pipelines/blog-cd/service.yaml
apiVersion: v1
# Indicates this as a service
kind: Service
metadata:
  # Service name
  name: blog-app
  namespace: blog-app
  labels:
    app: blog-app
spec:
  selector:
    # Selector for Pods
    app: blog-app
  ports:
    # Port Map
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
